--- a/src/app/management/management.component.css
+++ b/src/app/management/management.component.css
@@ -30,14 +30,13 @@
     align-items: center;
     align-content: center;
     background-color: #f2f2f1;
-    color: #505050;
+    color: #303030;
     height: max-content;
 }
 
-
 .progress {
     height: fit-content;
-    width: 30%;
+    width: 50%;
     background-color: #f2f2f1;
     display: flex;
     flex-direction: column;
@@ -45,7 +44,7 @@
 
 .progress span {
     display: block;
-    color:#FFF;
+    color: #FFF;
     line-height: 25px;
     text-align: center;
     font-weight: bold;
@@ -53,20 +52,30 @@
     margin: 5px;
 }
 
+/* .progress div {
+    background-color: #706fd3;
+    width: 100%;
+    height: fit-content;
+    margin: 5px;
+    line-height: 25px;
+    border-radius: 7px;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+} */
+
 .yes {
     background-color: #2ecc71;
 }
 
 .no {
-    background-color: #ca2c2c;
+    background-color: #d33e3e;
 }
 
 .some {
     background-color: #dfd43f;
 }
 
-
-.progress  P {
+.progress P {
     margin: 5px 0 0 0;
     font-weight: 500;
 }
