--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -29,37 +29,15 @@
 
 
 <!-- item  -->
-<div class="box-item">
-    <div class="name">  <h3> أ. م. حازم نومان عبد </h3>  </div>
+<div class="box-item" *ngFor="let evaluation of evaluations">
+    <div class="name">  <h3> {{evaluation.name}} </h3>  </div>
     <div class="progress">
-        <div  style="width:70%"> <span class="yes" > 90% &nbsp;</span> </div>
-        <div  style="width:30%"> <span class="some"> 30% &nbsp;</span> </div>
-        <div  style="width:20%"> <span class="no"  > 20% &nbsp;</span> </div>
-        <P> عدد الطلاب الذين قامو بالتصويت : 20</P>
+        <div>  <span [ngStyle]=" { 'width.%': evaluation.yes  } " class="yes" >     {{ evaluation.yes    | number:'.1-2' }}%   </span> </div>
+        <div>  <span [ngStyle]=" { 'width.%': evaluation.some } " class="some">     {{ evaluation.some   | number:'.1-2' }}%   </span> </div>
+        <div>  <span [ngStyle]=" { 'width.%': evaluation.no   } " class="no"  >     {{ evaluation.no     | number:'.1-2' }}%   </span> </div>
+        <P> عدد الطلاب الذين قامو بالتصويت : {{evaluation.counter}} </P>
     </div>
 </div>
 
-<!-- item  -->
-<div class="box-item">
-    <div class="name">  <h3> أ. م. طه عبد علي </h3>  </div>
-    <div class="progress">
-        <div  style="width:70%"> <span class="yes" > 90% &nbsp;</span> </div>
-        <div  style="width:30%"> <span class="some"> 30% &nbsp;</span> </div>
-        <div  style="width:20%"> <span class="no"  > 20% &nbsp;</span> </div>
-        <P> عدد الطلاب الذين قامو بالتصويت : 30</P>
-    </div>
-</div>
-
-
-<!-- item  -->
-<div class="box-item">
-    <div class="name">  <h3> أ. م. علي عبد الرحمن </h3>  </div>
-    <div class="progress">
-        <div  style="width:70%"> <span class="yes" > 90% &nbsp;</span> </div>
-        <div  style="width:30%">  <span class="some"> 30% &nbsp;</span> </div>
-        <div  style="width:20%"> <span class="no"  > 20% &nbsp;</span> </div>
-        <P> عدد الطلاب الذين قامو بالتصويت : 55</P>
-    </div>
-</div>
     
     
