--- a/src/app/evaluation/evaluation.component.css
+++ b/src/app/evaluation/evaluation.component.css
@@ -34,16 +34,27 @@ td, th {
 
 /* Title */
 
-.continer .page-title {
+.page-title {
+    position: relative;
+    right: 20px;
+    top: 20px;
+    margin: 30px 0;
     display: flex;
-    justify-content: center;
-    align-content: center;
+    justify-content: flex-start;
+    align-content: flex-start;
     align-items: center;
 }
 
-.continer .page-title h1 {
-    font-size: 2vw;
+.page-title img {
+    width: 250px;
+    height: 250px;
 }
+.page-title h1 {
+    text-align: right;
+    font-size: 2vw;
+    margin-right: 10px;
+}
+
 
 .note {
     margin-top: 30px;
