--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -4,7 +4,7 @@
 
   <!-- the title  -->
   <div class="page-title">
-      <img  class="logo-img" src="../../assets/SciLogo.png" alt="">
+    <img src="../../assets/SciLogo.png" alt="">
   </div>
 
   <p class="note">
