--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="l-items">
-        <a [routerLink]="['/login']"> <span> خروج </span> <i class="fas fa-user-alt-slash"></i> </a>
+        <a (click)="logOut()" > <span> خروج </span> <i class="fas fa-user-alt-slash"></i> </a>
     </div>
 
 </div>
