--- a/src/app/teaching-staff/teaching-staff.component.css
+++ b/src/app/teaching-staff/teaching-staff.component.css
@@ -34,7 +34,7 @@
 }
 
 .my-btn {
-    background-color: #706fd3;
+    background-color: #706fd3 !important;
     color: #fff !important;
 }
 
@@ -57,7 +57,6 @@
     color: #505050;
     height: max-content;
 }
-
 
 .progress {
     height: fit-content;
@@ -105,3 +104,105 @@ h3 {
 }
 
 
+.container-contact100 {
+    width: 100%;  
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  
+  .wrap-contact100 {
+   width: 80%;
+    background: #fff;
+    border-radius: 2px;
+    position: relative;
+  }
+
+  .contact100-form {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .contact100-form-title {
+    display: block;
+    width: 100%;
+    font-family: Raleway-Black;
+    font-size: 30px;
+    color: #333333;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-align: left;
+    padding-bottom: 32px;
+  }
+  
+  
+  .wrap-input100 {
+    width: 100%;
+    position: relative;
+    background-color: transparent;
+    margin-bottom: 35px;
+  }
+
+  
+  .label-input100 {
+    font-size: 14px;
+    color: #555555;
+    line-height: 1.5;
+  }
+  
+  .input100 {
+    display: block;
+    width: 100%;
+    background: #f2f2f2;
+    border-radius: 2px;
+  
+    font-size: 20px;
+    color: #686868;
+
+    padding: 0 28px;
+  
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  
+    margin-top: 10px;
+    outline: none;
+    border: none;  
+  }
+  
+ 
+  input.input100 {
+    height: 62px;
+  }
+  
+  .input100:focus {
+    background: #e6e6e6;
+  }
+
+  .modal-footer{
+      float: left;
+  }
+
+  .AddFromExcel {
+    padding: 20px;
+  }
+
+
+  
